Mon Sep 25 16:42:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Thu Aug 24 18:40:48 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Tue Aug 15 21:42:16 1995    <tytso@rsts-11.mit.edu>

	* update_wtmp.c (ptyint_update_wtmp): If EMPTY is not defined,
		then set ut.ut_type to 0 instead.

Fri Aug 11 15:49:30 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* Makefile.in (CFILES): Rename initialize_slave.c to init_slave.c
        so it isn't truncated in libpty.a.

Fri Aug 11 01:12:03 1995  Sam Hartman  <hartmans@infocalypse>

	* initialize_slave.c (pty_initialize_slave): You really do need to
        push and pop the streams on a Sun. 

Fri Aug 11 00:49:23 1995  Sam Hartman  <hartmans@dragons-lair.MIT.EDU>

	* configure.in (ac_cv_func_setsid): Pretend that Ultrix doesn't
        have setsid, because if it does make the call then the pty never
        becomes controlling tty.

Thu Aug 10 09:47:07 1995  Sam Hartman  <hartmans@dragons-lair.MIT.EDU>

	* open_ctty.c (pty_open_ctty): Move setpgrp() after void_assoc call

Wed Aug  9 00:16:40 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* pty-int.h (VHANG_first): Change defines so VHANG_FIRST doesn't
        get defined under Ultrix because Ultrix can only establish
        controlling terminal once per process and we need to get
        controlling terminal again after vhangup().

	* getpty.c (pty_getpty): Use the right test for slave buffer length.

Tue Aug  8 22:20:33 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* update_utmp.c (UTMP_FILE): _PATH_UTMP under NetBSD, not
		_UTMP_PATH; also fix typo (missing '&' on reference to
		ent)

Tue Aug  8 20:47:01 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* update_utmp.c (pty_update_utmp): change #ifdef NO_UT_PID to
		#ifndef

Tue Aug  8 09:13:50 1995  Sam Hartman  <hartmans@pao.mit.edu>

	* open_slave.c (pty_open_slave): Dissociate from controlling
        terminal before calling revoke.