@@ -3,6 +3,12 @@ Mon Sep 25 16:42:36 1995  Theodore Y. Ts'o  <tytso@dcl>
 	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
 		Makefile. 
 
+Thu Sep  7 19:13:05 1995  Mark Eichin  <eichin@cygnus.com>
+
+	* update_utmp.c: ultimately fall back to /etc/utmp for UTMP_FILE,
+	if it is still missing after all previous efforts.
+	* update_wtmp.c: /usr/adm/wtmp for WTMP_FILE likewise.
+
 Thu Aug 24 18:40:48 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* .Sanitize: Update file list
